# inside

./: .gitignore  README.md  pyproject.toml  requirements.txt
inside/: const.py  intervals.py  main.py  notes.py  sequence_generator.py  settings.py  utils.py
tests/: test_scale_generation.py
