[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inside"
version = "0.0.1"
authors = [
  { name="Chi-Chun Liu", email="contact@ccliu.me" },
]
description = "Chord tone and scale for inside playing"
readme = "README.md"

requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
inside = "inside.main:cli"

